--- a/config.json
+++ b/config.json
@@ -1,3 +1,10 @@
 {
-    "prefix": "/"
+    "prefix": "/",
+    "apiMank": "Nkwp9oR7Eg9yyKbejBpm",
+    "apiNaufal": "Arya.Rey.RFK.Team",
+    "abaikan-ini": {
+        "Kalian-Bisa-Dapat-ApiKey-Dari": "kosong",
+        "apiMank": "https://mhankbarbar.tech/",
+        "apiNaufal": "https://naufalhoster.xyz/"
+    }
 }
