--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "prefix": "/",
-    "apiMank": "Nkwp9oR7Eg9yyKbejBpm",
-    "apiNaufal": "Arya.Rey.RFK.Team",
+    "apiMank": "",
+    "apiNaufal": "",
     "abaikan-ini": {
         "Kalian-Bisa-Dapat-ApiKey-Dari": "kosong",
         "apiMank": "https://mhankbarbar.tech/",
