--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@adiwajshing/baileys": "^3.3.1",
     "axios": "^0.21.1",
+    "chalk": "^4.1.0",
     "colors": "^1.4.0",
     "lodash": "^4.17.20",
     "mathjs": "^8.1.1",
